# scholarship-factory

./: .gitignore  CLAUDE.md  HANDOFF_GH-44.md  HARNESS.md  REPO_CONTENT.md  mentor.md  notes_for_claude.md  prd.json  progress.txt  pyproject.toml  state.json
.claude/: settings.json
.github/workflows/: main.yml
docs/: s2-extract-tickets.md  s3-fetch-design.md
docs/changes/: GH-1.md  GH-11.md  GH-12.md  GH-13.md  GH-14.md  GH-15.md  GH-16.md  GH-26.md  GH-27.md  GH-28.md  GH-32.md  GH-33.md  GH-34.md  GH-35.md  GH-4.md  GH-42.md  GH-43.md  GH-6.md
prd/: GH-1.json  GH-11.json  GH-12.json  GH-13.json  GH-14.json  GH-15.json  GH-16.json  GH-26.json  GH-27.json  GH-28.json  GH-32.json  GH-33.json  GH-34.json  GH-35.json  GH-4.json  GH-42.json  GH-43.json  GH-44.json  GH-5.json  GH-6.json  _meta.json
scholarship_factory/: __init__.py  adapters.py  api.py  cache.py  clean.py  cli.py  extract.py  fetch.py  identity.py  jsonld.py  models.py  parse_dates.py  parse_money.py  pipeline.py  polite.py  profile.py  rank.py  refresh.py  seeds.py  store.py  traverse.py  urls.py
scholarship_factory/static/: index.html
tests/: test_adapters.py  test_api.py  test_cache.py  test_cli.py  test_extract.py  test_extract_gemini.py  test_fetch.py  test_identity.py  test_jsonld.py  test_models.py  test_parse_dates.py  test_parse_money.py  test_pipeline.py  test_polite.py  test_profile.py  test_rank.py  test_refresh.py  test_seeds.py  test_store.py  test_traverse.py  test_urls.py
tests/fixtures/: SOURCES.md  lablab_executorch.html  oppsforyouth_detail.html  uwaterloo_grants.html  (+1 more)
(+294 files in other folders)
