[project]
name = "scholarship-factory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic>=2",
    "dateparser",
]

[project.optional-dependencies]
llm = ["anthropic"]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scholarship_factory"]
