[project]
name = "scholarship-factory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic>=2",
    "dateparser",
    "httpx",
    "tenacity",
    "uvicorn>=0.51.0",
]

[project.scripts]
sf = "scholarship_factory.cli:main"

[project.optional-dependencies]
llm = ["anthropic"]
gemini = ["google-genai"]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scholarship_factory"]
